--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container" id="app">
     <div class="text-center font-weight-bold"  >List Of Rooms</div>
 
     <div>
@@ -40,6 +40,7 @@
                 <td>{{ room.light.level }}</td>
                 <td><div v-if="room.noise.status == 'ON'"><img src="img/ringer-on.png"></div>
                     <div v-else-if="room.noise.status == 'OFF'"><img src="img/ringer-off.png"></div>
+                </td>
                 <td>{{ room.noise.level }}</td>
                 <td><button @click="switchLight(room)" class="btn">
                     <img src="img/switch.png" width="20" /></button></td>
@@ -52,10 +53,12 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://unpkg.com/vue"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="js/index.js"></script>
+<script src="js/test.js"></script>
 
 </body>
 
