feature switsh-light

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <td>{{ room.noise.level }}</td>
                 <td><button @click="switchLight(room)" class="btn">
                     <img src="img/switch.png" width="20" /></button></td>
-                <td><button @click="switchRinger(room)" class="btn"><img src="img/switch.png" width="20" /></button></td>
+                <td><button @click="switchNoise(room)" class="btn"><img src="img/switch.png" width="20" /></button></td>
             </tr>
             </tbody>
         </table>
