--- a/src/SwitchLight.html
+++ b/src/SwitchLight.html
@@ -132,5 +132,5 @@ C'est pour récupéere le liste -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="js/nadia.js"></script>
+    <script src="js/rooms.js"></script>
 </html>
