--- a/src/SwitchRinger.html
+++ b/src/SwitchRinger.html
@@ -1,4 +1,4 @@
-<!doctype html>
+f<!doctype html>
 <html class="no-js" lang="" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
     <title>SwitchRINGER</title>
@@ -129,5 +129,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"crossorigin="anonymous"></script>
 <script src="https://unpkg.com/vue"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="js/nadia.js"></script>
+<script src="js/rooms.js"></script>
 </html>
